fixed purell image on mobile

--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -73,9 +73,9 @@
     padding: 0;
   }
   .Purell img {
-    margin: 50px 0;
     padding: 0 10%;
     height: 70%;
+    width: 70%;
     margin: 0 auto;
     object-fit: contain;
     background-image: url("../images/pic-gojo-bg.png");
@@ -90,6 +90,7 @@
   }
   .FifthThird img {
     object-fit: contain;
+
   }
   .FifthThird .Description {
     align-items: center;
